--- a/css/post.css
+++ b/css/post.css
@@ -195,7 +195,7 @@
 .article-content code {
 	font-family: Georgia, Times New Roman, Times, serif;
 	font-size: 1em;
-	font-style: italic;
+	/* font-style: italic; */
 	background: rgba(220, 220, 220, 0.25);
 	color: #c7254e;
 }
